--- a/naboj/core/config/dgs-config.sty
+++ b/naboj/core/config/dgs-config.sty
@@ -16,6 +16,9 @@
 \NewDocumentCommand{\currentPart}{}{<void part>}
 \NewDocumentCommand{\currentSeries}{}{<void series>}
 
+\NewDocumentCommand{\currentYear}{}{\the\numexpr\seminarFounded+\currentVolume\relax}
+\NewDocumentCommand{\currentAcademicYear}{}{\the\numexpr\currentYear-1\relax/\currentYear}
+
 \NewDocumentCommand{\currentDir}{}{input}
 \NewDocumentCommand{\currentProblem}{}{<undefined>}
 \NewDocumentCommand{\currentProblemName}{}{<undefined>}
