Monster pack again :-(

--- a/core/config/dgs-config-fks.sty
+++ b/core/config/dgs-config-fks.sty
@@ -27,3 +27,5 @@
         \otherwise\formatProblemCategories[\errorMessage{<FKS> problem number cannot be "#1"! Must be between 1 and \seminarProblemCount.}]%
     \endswitch%
 }
+
+\RenewDocumentCommand{\smallLogoRaise}{}{-2pt}
