--- a/core/dgs-custom.sty
+++ b/core/dgs-custom.sty
@@ -54,7 +54,7 @@
 
 % fancyhdr -- fancy pagestyle
 \fancypagestyle{main}{
-    \fancyhead[LO,RE]{\raisebox{\smallLogoRaise}{\includegraphics[keepaspectratio = true, height = 6mm]{core/logo/\seminarID/mini.pdf}}}
+    \fancyhead[LO,RE]{\raisebox{\smallLogoRaise}{\includegraphics[keepaspectratio = true, height = 6mm]{core/logo/\seminarID/logo.pdf}}}
     \fancyfoot[LO,RE]{\href{mailto:\seminarEmail}{\texttt{\seminarEmail}}}
     \fancyfoot[C]{\small \thepage~z~\pageref*{LastPage}}
     \fancyfoot[LE,RO]{\href{\seminarURL}{\texttt{\seminarURL}}}
@@ -100,7 +100,7 @@
     \fancyhead[R]{
         \begin{minipage}{0.2\textwidth}
             \flushright
-            \includegraphics[width = 0.7\linewidth, keepaspectratio = true]{core/logo/\seminarID/large.pdf}\\[0pt]
+            \includegraphics[width = 0.7\linewidth, keepaspectratio = true]{core/logo/\seminarID/logo.pdf}\\[0pt]
         \end{minipage}
     }
 	\fancyfoot[LO,RE]{\href{mailto:\seminarEmail}{\texttt{\seminarEmail}}}
