--- a/core/templates/ufo/intro.tex
+++ b/core/templates/ufo/intro.tex
@@ -31,4 +31,4 @@ fyzika nebola vždy Tvojou obľúbenou disciplínou, zistíš, že fyzici sú su
 
 Všetky informácie o~UFO, debatu a~fotky zo sústrediek nájdeš na \URL{\seminarURL}, resp. \URL{http://www.fks.sk/}.
 
-\hfill \textit{ Veľa zdaru Ti prajú Tvoji vedúci!}%
+\hfill \textit{Veľa zdaru Ti prajú Tvoji vedúci!}
