--- a/core/templates/fks/intro.tex
+++ b/core/templates/fks/intro.tex
@@ -18,8 +18,8 @@ Súťaž prebieha korešpondenčnou formou. V~rukách držíte zadania prvej sé
 Ich riešenia (\emph{celý postup, nie len výsledok}) nám pošlite do stanoveného termínu
 buď poštou, alebo elektronicky (\URL{\seminarSubmitURL}). Riešenia opravíme,
 obodujeme a spolu so vzorovými riešeniami pošleme späť. Takto prebehnú do
-mája tri série súťaže, na základe ktorých vyberieme tých najlepších na
-júnové sústredenie (prvých 12 z~každej kategórie, v~prípade nezáujmu
+decembra tri série súťaže, na základe ktorých vyberieme tých najlepších na
+januárové sústredenie (prvých 12 z~každej kategórie, v~prípade nezáujmu
 pozvaných pozývame náhradníkov podľa výberu vedúcich, spravidla ďalších podľa
 poradia).
 
@@ -30,4 +30,4 @@ hra, \dots\ Hlavne však spoznáte skvelých ľudí! Ak aj fyzika nebola vždy v
 obľúbenou disciplínou, zistíte, že fyzici sú super.  Všetky informácie o~FKS
 vrátane fotiek zo sústredka nájdeš na \URL{\seminarURL}.
 
-\hfill \emph{Veľa zdaru Ti prajú Tvoji vedúci!}
+\hfill \emph{Veľa zdaru Ti prajú Tvoji vedúci!}%
