--- a/core/templates/fks/rules.tex
+++ b/core/templates/fks/rules.tex
@@ -1,6 +1,6 @@
 \pagestyle{rules}
 
-\section{Pravidlá a postihy (BUBUBU)}
+\section{Pravidlá a postihy}
     \begin{itemize}
         \item Riešiteľom môže byť každý študent strednej školy, gymnázia, prípadne aj základnej školy.
         
@@ -83,7 +83,7 @@
     Zaregistruj sa na \URL{\seminarURL} a~začni čo najskôr počítať. Nečakaj však, že všetko stihneš porátať
     za posledný víkend či hodinu slovenčiny v~deň termínu odoslania série :-)
 
-\textbf{Zaregistruj sa, aj keď si už FKS riešil, alebo budeš posielať riešenia poštou.}
-Prechádzame totiž na novú stránku, na ktorej Ťa čakajú aj nové interaktívne úlohy. Ak máš účet na seminároch Prask alebo KSP, ďalší si nezakladaj, účty sú totožné pre všetky semináre.
+    \textbf{Zaregistruj sa, aj keď si už FKS riešil, alebo budeš posielať riešenia poštou.}
+    Ak máš účet na seminároch Prask alebo KSP, ďalší si nezakladaj, účty sú totožné pre všetky semináre.
 
 \hfill \emph{Veľa zdaru Ti prajú Tvoji vedúci!}%
