--- a/core/templates/ufo/intro.tex
+++ b/core/templates/ufo/intro.tex
@@ -19,7 +19,7 @@ Celé to prebieha korešpondenčnou formou. Riešenia týchto úloh (to znamená
 \emph{celý postup} riešenia a vysvetlenie, nie len výsledok) nám pošli
 poštou do stanoveného termínu na adresu v~hlavičke. My Tvoje riešenia
 opravíme, obodujeme a spolu so vzorovými riešeniami a novými úlohami Ti
-pošleme späť. Takto prebehnú do januára tri série súťaže, na základe
+pošleme späť. Takto prebehnú do decembra tri série súťaže, na základe
 ktorých súťaž vyhodnotíme.
 
 Tých úplne najlepších odmeníme hodnotnými cenami a všetkých úspešných riešiteľov
@@ -31,4 +31,4 @@ fyzika nebola vždy Tvojou obľúbenou disciplínou, zistíš, že fyzici sú su
 
 Všetky informácie o~UFO, debatu a~fotky zo sústrediek nájdeš na \URL{\seminarURL}, resp. \URL{http://www.fks.sk/}.
 
-\hfill \textit{Veľa zdaru Ti prajú Tvoji vedúci!}
+\hfill \textit{Veľa zdaru Ti prajú Tvoji vedúci!}%
