--- a/naboj/core/dgs.sty
+++ b/naboj/core/dgs.sty
@@ -74,6 +74,7 @@
 	animate,
 	skull,
 	hyphenat,
+    afterpage,
     fancyvrb                                                % fancy verbatim (currently unused)
 }
 
