--- a/naboj/core/templates/answers.tex
+++ b/naboj/core/templates/answers.tex
@@ -9,12 +9,8 @@
 \newcounter{problem}
 
 \begin{document}            
-    \loadRegularStyle
-%    \thispagestyle{first}
-%    \vspace*{2em}
+    \loadBookletStyle
    
     \section{\texorpdfstring{\sectionAnswers}{}}
-     
-    \loadProblemsStyle
     \addAnswers
 \end{document}
