--- a/naboj/core/templates/booklet.tex
+++ b/naboj/core/templates/booklet.tex
@@ -9,18 +9,11 @@
 \newcounter{problem}
 
 \begin{document}            
-    \loadRegularStyle
-%    \thispagestyle{first}
-%    \vspace*{2em}
+    \loadBookletStyle
    
     \section{\texorpdfstring{\sectionProblems}{}}
-     
-    \pagestyle{problems}    
-    \loadProblemsStyle
     \addProblems
-
     \newpage
     \section{\texorpdfstring{\sectionSolutions}{}}                 
-
     \addSolutions
 \end{document}
