--- a/core/config/dgs-config.sty
+++ b/core/config/dgs-config.sty
@@ -14,7 +14,7 @@
 
 \NewDocumentCommand{\currentVolume}{}{<void year>}
 \NewDocumentCommand{\currentPart}{}{<void part>}
-\NewDocumentCommand{\currentSeries}{}{<void series>}
+\NewDocumentCommand{\currentRound}{}{<void series>}
 \NewDocumentCommand{\currentDeadline}{}{<void deadline>}
 \NewDocumentCommand{\currentPartGenitive}{}{%
     \switch[\number\currentPart=]%
