--- a/core/templates/solutions.tex
+++ b/core/templates/solutions.tex
@@ -14,7 +14,7 @@
 	\thispagestyle{first}
 	\vspace*{2em}
    
-    \section{\texorpdfstring{Riešenia \currentSeries. série \currentPartGenitive\ časti}{}}
+    \section{\texorpdfstring{Riešenia \currentRound. kola \currentPartGenitive\ časti}{}}
         
     \pagestyle{problems}    
 	\loadSolutionsStyle
