--- a/core/templates/problems.tex
+++ b/core/templates/problems.tex
@@ -15,7 +15,7 @@
 	\vspace*{2em}
    
     {
-        \section{\texorpdfstring{Zadania \currentSeries. série \currentPartGenitive\ časti}{}}
+        \section{\texorpdfstring{Zadania \currentRound. kola \currentPartGenitive\ časti}{}}
 		\centering
 		\vspace{-1.3em}
         {Termín odoslania \currentDeadline}\\[2pt]
