--- a/core/dgs-custom.sty
+++ b/core/dgs-custom.sty
@@ -61,7 +61,7 @@
     \fancyhead[LO,RE]{\raisebox{\smallLogoRaise}{\includegraphics[keepaspectratio = true, height = 6mm]{core/logo/\seminarID/logo.pdf}}}
     \fancyhead[LE,RO]{(main style)}
     \fancyfoot[LO,RE]{\href{mailto:\seminarEmail}{\texttt{\seminarEmail}}}
-    \fancyfoot[C]{\small \thepage~z~\pageref*{LastPage}}
+    \fancyfoot[C]{\small \thepage}
     \fancyfoot[LE,RO]{\href{\seminarURL}{\texttt{\seminarURL}}}
 }
 
@@ -109,6 +109,6 @@
         \end{minipage}
     }
 	\fancyfoot[LO,RE]{\href{mailto:\seminarEmail}{\texttt{\seminarEmail}}}
-    \fancyfoot[C]{\small \thepage~z~\pageref*{LastPage}}
+    \fancyfoot[C]{\small \thepage}
     \fancyfoot[LE,RO]{\URL{\seminarURL}}
 }    
