--- a/naboj/core/dgs-custom.sty
+++ b/naboj/core/dgs-custom.sty
@@ -54,7 +54,7 @@
     \fancyhead[LO,RE]{\raisebox{\smallLogoRaise}{\includegraphics[keepaspectratio = true, height = 6mm]{core/logo/\seminarID/mini.pdf}}}
     \fancyhead[C]{\textit{\currentVolume. Fyzikálny Náboj, \currentYear}}
     \fancyfoot[LO,RE]{\href{mailto:\seminarEmail}{\texttt{\seminarEmail}}}
-    \fancyfoot[C]{\small \thepage~z~\pageref*{LastPage}}
+    \fancyfoot[C]{\small \thepage}
     \fancyfoot[LE,RO]{\href{\seminarURL}{\texttt{\seminarURL}}}
 }
 
@@ -99,6 +99,6 @@
         \end{minipage}
     }
 	\fancyfoot[LO,RE]{\href{mailto:\seminarEmail}{\texttt{\seminarEmail}}}
-    \fancyfoot[C]{\small \thepage~z~\pageref*{LastPage}}
+    \fancyfoot[C]{\small \thepage}
     \fancyfoot[LE,RO]{\URL{\seminarURL}}
 }    
