Minor upgrades and bugfixes across core

--- a/core/templates/booklet.tex
+++ b/core/templates/booklet.tex
@@ -16,4 +16,5 @@
     \protectedInput{core/templates/\seminarID/intro.tex}%
     \newpage
     \protectedInput{core/templates/\seminarID/rules.tex}%
+    \newpage
 \end{document}
