--- a/core/dgs.sty
+++ b/core/dgs.sty
@@ -55,7 +55,7 @@
     graphicx,
     listings,
     lastpage,
-	marvosym,
+    marvosym,
     calc,
     pdftexcmds,
     xifthen,
@@ -71,6 +71,7 @@
 	csvsimple,
 	animate,
 	skull,
+    etoolbox,
 	hyphenat,
     fancyvrb                                                % fancy verbatim (currently unused)
 }
@@ -140,6 +141,7 @@
     \DeclareMathSymbol{4}{\mathalpha}{\eu@DigitsArabic@symfont}{`4}
     \DeclareMathSymbol{5}{\mathalpha}{\eu@DigitsArabic@symfont}{`5}
     \DeclareMathSymbol{6}{\mathalpha}{\eu@DigitsArabic@symfont}{`6}
+
     \DeclareMathSymbol{7}{\mathalpha}{\eu@DigitsArabic@symfont}{`7}
     \DeclareMathSymbol{8}{\mathalpha}{\eu@DigitsArabic@symfont}{`8}
     \DeclareMathSymbol{9}{\mathalpha}{\eu@DigitsArabic@symfont}{`9}
@@ -152,8 +154,14 @@
 	\ifstrequals{#1}{\currentLanguage}{#2}{}%
 }
 
+% Disgusting hacks to bypass idiotic limitations of LaTeX -- 16 alphabets per document
 \makeatletter
 \NewDocumentCommand{\padzero}{m m}{\@anim@pad{#1}{#2}}
+
+\def\new@mathgroup{\alloc@8\mathgroup\mathchardef\@cclvi}
+\patchcmd{\document@select@group}{\sixt@@n}{\@cclvi}{}{}
+\patchcmd{\select@group}{\sixt@@n}{\@cclvi}{}{}
+
 \makeatother
 
 % \romanNumeral{number}
