--- a/core/templates/ufo/rules.tex
+++ b/core/templates/ufo/rules.tex
@@ -26,7 +26,7 @@
 
 \subsection{Ako získavať veľa bodov?}
 	Ako v~mnohých iných súťažiach, aj tu platí jednoduchá zásada -- písať všetko, čo o~príklade vieš. Teda, aj keď nevieš celé riešenie, oplatí sa písať časti
-	riešenia, názory, postrehy, pokusy. Keď chceš vidieť, ako má vyzerať riešenie, pozri sa na tento dokument \URL{\seminarURL{}vzor.pdf}.
+    riešenia, názory, postrehy, pokusy. Keď chceš vidieť, ako má vyzerať riešenie, prečítaj si \URL{\seminarURL{}/ako_riesit}. 
 
 	Nemaj strach poslať iba niekoľko úloh. Iba málokto vypočíta všetky úlohy a~dobre umiestniť sa dá aj s~bodmi za menej úloh.
 
