--- a/core/templates/booklet.tex
+++ b/core/templates/booklet.tex
@@ -14,7 +14,7 @@
     \pagestyle{rules}
     \vspace*{2em}
     \protectedInput{core/templates/\seminarID/intro.tex}%
-    \newpage
+    \newpage%
     \protectedInput{core/templates/\seminarID/rules.tex}%
-    \newpage
+    \newpage%
 \end{document}
