--- a/core/templates/ufo/rules.tex
+++ b/core/templates/ufo/rules.tex
@@ -16,7 +16,7 @@
 			\item na každý papier napíš hore \emph{hlavičku} s~menom, triedou, školou a~číslom príkladu,
 			\item ak riešiš prvýkrát, pošli aj vyplnenú návratku (nájdeš ju na ďalšej strane).
 		\end{itemize}
-	Viac informácií k~elektronickým riešeniam nájdeš na stránke (\URL{\seminarURL}) pod sekciou e-riešenia.
+	Viac informácií k~elektronickým riešeniam nájdeš na stránke \URL{\seminarURL} v sekcii e-riešenia.
 
 	\item[$\skull$] Úlohy rieš samostatne! Za odpisovanie strhávame body a~sme agresívni. 
 
@@ -26,7 +26,7 @@
 
 \subsection{Ako získavať veľa bodov?}
 	Ako v~mnohých iných súťažiach, aj tu platí jednoduchá zásada -- písať všetko, čo o~príklade vieš. Teda, aj keď nevieš celé riešenie, oplatí sa písať časti
-    riešenia, názory, postrehy, pokusy. Keď chceš vidieť, ako má vyzerať riešenie, prečítaj si \URL{\seminarURL{}/ako_riesit}. 
+    riešenia, názory, postrehy, pokusy. Keď chceš vidieť, ako má vyzerať riešenie, prečítaj si \URL{\seminarURL ako\_riesit}. 
 
 	Nemaj strach poslať iba niekoľko úloh. Iba málokto vypočíta všetky úlohy a~dobre umiestniť sa dá aj s~bodmi za menej úloh.
 
