--- a/naboj/core/templates/answers.tex
+++ b/naboj/core/templates/answers.tex
@@ -11,6 +11,7 @@
 \begin{document}            
     \loadBookletStyle
    
-    %    \section{\texorpdfstring{\sectionAnswers}{}}
+    \section{\texorpdfstring{\sectionAnswers}{}}
+    \newpage
     \addAnswers
 \end{document}
