--- a/naboj/core/config/dgs-config.sty
+++ b/naboj/core/config/dgs-config.sty
@@ -19,7 +19,7 @@
 \NewDocumentCommand{\currentYear}{}{\the\numexpr\seminarFounded+\currentVolume\relax}
 \NewDocumentCommand{\currentAcademicYear}{}{\the\numexpr\currentYear-1\relax/\currentYear}
 
-\NewDocumentCommand{\currentDir}{}{input}
+\NewDocumentCommand{\rootDirectory}{}{<undefined directory>}
 \NewDocumentCommand{\currentProblem}{}{<undefined>}
 \NewDocumentCommand{\currentProblemName}{}{<undefined>}
 \NewDocumentCommand{\currentLanguage}{}{<undefined>}
