--- a/naboj/core/config/dgs-config.sty
+++ b/naboj/core/config/dgs-config.sty
@@ -20,6 +20,8 @@
 \NewDocumentCommand{\currentAcademicYear}{}{\the\numexpr\currentYear-1\relax/\currentYear}
 
 \NewDocumentCommand{\rootDirectory}{}{<undefined directory>}
+\NewDocumentCommand{\teamCount}{}{<undefined>}
+\NewDocumentCommand{\problemCount}{}{<undefined>}
 \NewDocumentCommand{\currentProblem}{}{<undefined>}
 \NewDocumentCommand{\currentProblemName}{}{<undefined>}
 \NewDocumentCommand{\currentLanguage}{}{<undefined>}
