--- a/naboj/core/templates/tearoff.tex
+++ b/naboj/core/templates/tearoff.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, twoside]{article}
+\documentclass[12pt, oneside]{article}
 
 \usepackage{core/dgs}
 \usepackage{core/config/dgs-config}
@@ -9,10 +9,10 @@
 \newcounter{problem}
 
 \newgeometry{
-    left = 8mm,
-    right = 8mm,
-    bottom = 8mm,
-    top = 8mm
+    left = 6mm,
+    right = 6mm,
+    bottom = 6mm,
+    top = 6mm
 }
 
 \begin{document}            
