--- a/naboj/core/templates/booklet.tex
+++ b/naboj/core/templates/booklet.tex
@@ -9,8 +9,10 @@
 \newcounter{problem}
 
 \begin{document}            
+    \loadIntroStyle
+    \addIntro
+    \newpage
     \loadBookletStyle
-   
     \section{\texorpdfstring{\sectionProblems}{}}
     \addProblems
     \newpage
