--- a/naboj/core/templates/booklet.tex
+++ b/naboj/core/templates/booklet.tex
@@ -12,6 +12,8 @@
     \loadIntroStyle
     \addIntro
     \newpage
+    \null
+    \newpage
     \loadBookletStyle
     \section{\texorpdfstring{\sectionProblems}{}}
     \addProblems
