--- a/naboj/core/templates/i18n/czech.tex
+++ b/naboj/core/templates/i18n/czech.tex
@@ -1,4 +1,7 @@
 \RenewDocumentCommand{\sectionProblems}{}{Zadání}
 \RenewDocumentCommand{\sectionSolutions}{}{Vzorová řešení}
 \RenewDocumentCommand{\sectionAnswers}{}{Výsledky}
-
+\RenewDocumentCommand{\stringCompetition}{}{Fyzikální Náboj}
+\RenewDocumentCommand{\stringTeam}{}{Tým}
+\RenewDocumentCommand{\stringEmail}{}{info-cz@physics.naboj.org}
+\RenewDocumentCommand{\stringWebsite}{}{https://physics.naboj.org/}
