--- a/naboj/core/templates/i18n/defaults.tex
+++ b/naboj/core/templates/i18n/defaults.tex
@@ -1,4 +1,7 @@
 \NewDocumentCommand{\sectionProblems}{}{<undefined>}
 \NewDocumentCommand{\sectionSolutions}{}{<undefined>}
 \NewDocumentCommand{\sectionAnswers}{}{<undefined>}
-
+\NewDocumentCommand{\stringCompetition}{}{<undefined>}
+\NewDocumentCommand{\stringTeam}{}{<undefined>}
+\NewDocumentCommand{\stringEmail}{}{<undefined>}
+\NewDocumentCommand{\stringWebsite}{}{<undefined>}
