--- a/naboj/core/templates/i18n/english.tex
+++ b/naboj/core/templates/i18n/english.tex
@@ -1,3 +1,4 @@
 \RenewDocumentCommand{\sectionProblems}{}{Problems}
 \RenewDocumentCommand{\sectionSolutions}{}{Solutions}
-\RenewDocumentCommand{\sectionAnswers}{}{Results}
+\RenewDocumentCommand{\sectionAnswers}{}{Answers}
+\RenewDocumentCommand{\stringTeam}{}{Team}
