--- a/naboj/core/templates/instructions.tex
+++ b/naboj/core/templates/instructions.tex
@@ -17,13 +17,18 @@
 \begin{document}            
     \loadTearoffStyle
     
+    \section{Pokyny pred začiatkom Fyzikálneho Náboja}
+        \addInstructions
+
+    \newpage
+
     \section{Tabuľka konštánt na Fyzikálny Náboj 2016}
     \begin{center}
     
         \small
         \textit{%
 			Počas Náboja odporúčame používať hodnoty konštánt z~tejto tabuľky, pretože sme pomocou nich počítali vzorové riešenia.
-            Výsledok výpočtu s presnejšími hodnotami konštánt bude určite uznaný.
+            Výsledok výpočtu s presnejšími hodnotami konštánt však bude určite uznaný.
 		}
         \normalsize
     \end{center}
