--- a/naboj/core/dgs-custom.sty
+++ b/naboj/core/dgs-custom.sty
@@ -1,7 +1,9 @@
 % package titlesec -- formatting of section headers
 %\titleformat{\subsection}[runin / hang]{format whole}{label}{separation}{before}[after]
-\NewDocumentCommand{\loadRegularStyle}{}{	
-	\pagestyle{problems}
+
+\NewDocumentCommand{\loadCoreStyle}{}{
+    \pagestyle{empty}
+    
     \renewcommand{\headrulewidth}{0.4pt}
     \renewcommand{\footrulewidth}{0.4pt}
     
@@ -11,6 +13,7 @@
     \titlespacing*{\section}{0pt}{0pt}{12pt}
 	\titlespacing*{\subsection}{0pt}{8pt}{10pt}
 	\titlespacing*{\subsubsection}{0pt}{8pt}{0pt}
+
 }
 
 \NewDocumentCommand{\loadIntroStyle}{}{
@@ -19,13 +22,15 @@
 }
 
 \NewDocumentCommand{\loadBookletStyle}{}{
-    \loadRegularStyle
+    \loadCoreStyle
+    \pagestyle{booklet}
     \titleformat{\subsection}[runin]{\bfseries}{}{0pt}{\setlength{\fboxsep}{3pt}\framebox[7mm]}[\setlength{\fboxsep}{0pt}]
 }
 
 \NewDocumentCommand{\loadTearoffStyle}{}{
-    \loadBookletStyle
+    \loadCoreStyle
     \pagestyle{empty}
+    \titleformat{\subsection}[runin]{\bfseries}{}{0pt}{\setlength{\fboxsep}{3pt}\framebox[7mm]}[\setlength{\fboxsep}{0pt}]
     \renewcommand{\headrulewidth}{0pt}
     \renewcommand{\footrulewidth}{0pt}
 }
@@ -69,14 +74,14 @@
 }
 
 \fancypagestyle{main}{
-    \fancyhead[LO,RE]{\raisebox{\smallLogoRaise}{\includegraphics[keepaspectratio = true, height = 6mm]{core/logo/\seminarID/mini.pdf}}}
-    \fancyhead[C]{\textit{\currentVolume. Fyzikálny Náboj, \currentYear}}
-    \fancyfoot[LO,RE]{\href{mailto:\seminarEmail}{\texttt{\seminarEmail}}}
+    \fancyhead[LO,RE]{\raisebox{\smallLogoRaise}{\includegraphics[keepaspectratio = true, height = 6mm]{core/logo/\seminarID/logo.pdf}}}
+    \fancyhead[C]{\textit{\currentVolume. \stringCompetition, \currentYear}}
+    \fancyfoot[LO,RE]{\href{mailto:\stringEmail}{\texttt{\stringEmail}}}
     \fancyfoot[C]{\small \thepage}
-    \fancyfoot[LE,RO]{\href{\seminarURL}{\texttt{\seminarURL}}}
+    \fancyfoot[LE,RO]{\href{\stringWebsite}{\texttt{\stringWebsite}}}
 }
 
-\fancypagestyle{problems}{%
+\fancypagestyle{booklet}{%
     \pagestyle{main}
     \RenewDocumentCommand{\sectionmark}{m}{\markright{##1}}
     \RenewDocumentCommand{\subsectionmark}{m}{}
