--- a/naboj/core/templates/i18n/hungarian.tex
+++ b/naboj/core/templates/i18n/hungarian.tex
@@ -1,3 +1,7 @@
-\RenewDocumentCommand{\sectionProblems}{}{Erteple}
-\RenewDocumentCommand{\sectionSolutions}{}{Üdvözöljük}
-
+\RenewDocumentCommand{\sectionProblems}{}{Feladatok}
+\RenewDocumentCommand{\sectionSolutions}{}{Megoldások}
+\RenewDocumentCommand{\sectionAnswers}{}{Válaszok}
+\RenewDocumentCommand{\stringCompetition}{}{Náboj Fizika}
+\RenewDocumentCommand{\stringTeam}{}{Csapat}
+\RenewDocumentCommand{\stringEmail}{}{info-hu@physics.naboj.org}
+\RenewDocumentCommand{\stringWebsite}{}{https://physics.naboj.org/}
