Tidying up names

--- a/core/config/dgs-config-FKS.sty
+++ b/core/config/dgs-config-FKS.sty
@@ -1,7 +1,7 @@
 \NeedsTeXFormat{LaTeX2e}[2011/01/01]
 \ProvidesPackage{dgs-config-fks}[2016/01/09 DeGeŠ configuration file for FKS]
 
-\RenewDocumentCommand{\seminarID}{}{fks}
+\RenewDocumentCommand{\seminarID}{}{FKS}
 \RenewDocumentCommand{\seminarShort}{}{FKS}
 \RenewDocumentCommand{\seminarFull}{}{Fyzikálny korešpondenčný seminár}
 \RenewDocumentCommand{\seminarURL}{}{https://fks.sk/}
