--- a/core/config/dgs-config-FX.sty
+++ b/core/config/dgs-config-FX.sty
@@ -1,7 +1,7 @@
 \NeedsTeXFormat{LaTeX2e}[2011/01/01]
 \ProvidesPackage{dgs-config-fx}[2015/09/08 Trojsten unified TeX -- configuration file for FX]
 
-\RenewDocumentCommand{\seminarID}{}{fx}
+\RenewDocumentCommand{\seminarID}{}{FX}
 \RenewDocumentCommand{\seminarShort}{}{FX}
 \RenewDocumentCommand{\seminarFull}{}{Fyzikálny korešpondenčný seminár, kategória FX}
 \RenewDocumentCommand{\seminarURL}{}{http://fx.fks.sk/}
@@ -9,7 +9,7 @@
 \RenewDocumentCommand{\seminarDepartmentFull}{}{Katedra teoretickej fyziky a didaktiky fyziky}
 \RenewDocumentCommand{\seminarEmail}{}{fx@fks.sk}
 \RenewDocumentCommand{\seminarFounded}{}{2005}
-\RenewDocumentCommand{\seminarProblemCount}{}{3}
+\RenewDocumentCommand{\seminarProblemCount}{}{6}
 
 % hyperref URL link colour
 \definecolor{color-link}{rgb}{0.6, 0.2, 0.1}
